laborations/lab2/testsuite/good/if_state_propagation.cc
int main() {
  int x;

  if ((x = 1) == 1) {} else {}

  printInt(x);

  return 0;
}
