laborations/lab2/testsuite/bad/bad/decl_cleanup_block.cc
// Check that scope of blocks is cleaned up

int main () {
  { int x = 1; }
  return x;
}
